[package]
edition = "2021"
rust-version = "1.62"

authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32F4 series microcontrollers"
documentation = "https://docs.rs/stm32f4xx-hal"
keywords = ["arm", "cortex-m", "stm32f4xx", "hal"]
license = "0BSD"
name = "stm32f4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f4xx-hal"
version = "0.23.0"

[package.metadata.docs.rs]
features = [
    "stm32f429",
    "usb_fs",
    "can",
    "i2s",
    "fsmc_lcd",
    "rtic1",
    "defmt",
    "sdio-host",
]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
bxcan = { version = "0.8", optional = true }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
nb = "1.1"
rand_core_06 = { package = "rand_core", version = "0.6.4" }
rand_core = "0.9.3"
synopsys-usb-otg = { version = "0.4.0", features = [
    "cortex-m",
], optional = true }
sdio-host = { version = "0.9.0", optional = true }
embedded-dma = "0.2.0"
embedded-display-controller = { version = "^0.2.0", optional = true }
bare-metal = { version = "1" }
void = { default-features = false, version = "1.0.2" }
display-interface = { version = "0.5.0", optional = true }
display-interface-04 = { package = "display-interface", version = "0.4.1", optional = true }
fugit = "0.3.7"
fugit-timer = "0.1.3"
# rtic1
rtic-monotonic = { version = "1.0", optional = true }
systick-monotonic = { version = "1.0.1", optional = true }
cortex-m-rtic = { version = "1.1.4", features = [
    "test-critical-section",
], optional = true }
# rtic2
rtic-time = { version = "2.0.1", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
rtic = { version = "2.2", features = ["thumbv7-backend"], optional = true }
atomic-polyfill = { version = "1.0.3", optional = true }

stm32-fmc = { version = "0.4.0", optional = true }

enumflags2 = "0.7.12"
embedded-storage = "0.3"
document-features = "0.2"

micromath = { version = "2.1.0", optional = true }

[dependencies.stm32f4]
version = "0.16.0"
features = ["atomics"]
optional = true

[dependencies.stm32f7]
version = "0.16.0"
features = ["atomics"]
optional = true

[dependencies.time]
version = "0.3.44"
default-features = false

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-nb]
version = "1.0"

[dependencies.embedded-io]
version = "0.6.1"

[dependencies.stm32_i2s_v12x]
version = "0.5.0"
optional = true

[dev-dependencies]
static_cell = "2.1.1"
defmt = "1.0.1"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
heapless = "0.9.1"
panic-halt = "1.0.0"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
embedded-graphics-07 = { package = "embedded-graphics", version = "0.7.1" }
embedded-hal-bus = "0.3.0"
usb-device = "0.3.1"
usbd-serial = "0.2.0"
micromath = "2.1"
dwt-systick-monotonic = "1.1"
st7789 = "0.7.0"
rtt-target = { version = "0.6.1" }
display-interface-spi-04 = { package = "display-interface-spi", version = "0.4.1" }
ist7920 = "0.1.1"
smart-leds = "0.4.0"
ws2812-spi = { version = "0.5.1", features = [] }
hd44780-driver = "0.4.0"
display-interface = "0.5"
display-interface-04 = { package = "display-interface", version = "0.4.1" }
ft6x06 = "0.1.2"
otm8009a = "0.1"
ushell = "0.3.6"

[dev-dependencies.time]
version = "0.3"
default-features = false
features = ["macros"]

[features]
f4 = ["dep:stm32f4", "bb", "dma", "i2c_v1", "spi_v1", "uart_v2"]
f7 = ["dep:stm32f7", "dep:micromath", "dma", "i2c_v2", "spi_v2", "uart_v3"]

# F4

#! Use one of the supported STM32-serie related features:
#! `stm32f401`, `stm32f405`, `stm32f407`, `stm32f415`, `stm32f417`, `stm32f410`,
#! `stm32f411`, `stm32f412`, `stm32f413`, `stm32f423`, `stm32f427`, `stm32f429`,
#! `stm32f437`, `stm32f439`, `stm32f446`, `stm32f469`, `stm32f479`.

# Note: stm32f4 has only one feature for some very similar device families,
# so it's intended for e.g. stm32f405/415 to both enable stm32f4/stm32f405.
stm32f401 = ["svd-f401"]
stm32f405 = ["svd-f405"]
stm32f407 = ["svd-f407"]
stm32f415 = ["svd-f405", "cryp"]
stm32f417 = ["svd-f407", "cryp"]
stm32f410 = ["svd-f410"]
stm32f411 = ["svd-f411"]
stm32f412 = ["svd-f412"]
stm32f413 = ["svd-f413"]
stm32f423 = ["svd-f413", "aes"]
stm32f427 = ["svd-f427"]
stm32f429 = ["svd-f429"]
stm32f437 = ["svd-f427", "cryp"]
stm32f439 = ["svd-f429", "cryp"]
stm32f446 = ["svd-f446"]
stm32f469 = ["svd-f469"]
stm32f479 = ["svd-f469", "cryp"]

svd-f401 = ["f4", "stm32f4?/stm32f401", "gpio-f401"]
svd-f405 = ["f4", "stm32f4?/stm32f405", "gpio-f417"]
svd-f407 = ["f4", "stm32f4?/stm32f407", "gpio-f417", "eth"]
svd-f410 = ["f4", "stm32f4?/stm32f410", "gpio-f410"]
svd-f411 = ["f4", "stm32f4?/stm32f411", "gpio-f411"]
svd-f412 = ["f4", "stm32f4?/stm32f412", "gpio-f412"]
svd-f413 = ["f4", "stm32f4?/stm32f413", "gpio-f413"]
svd-f427 = ["f4", "stm32f4?/stm32f427", "gpio-f427", "fsmc"]
svd-f429 = ["f4", "stm32f4?/stm32f429", "gpio-f427", "fmc", "ltdc"]
svd-f446 = ["f4", "stm32f4?/stm32f446", "gpio-f446"]
svd-f469 = ["f4", "stm32f4?/stm32f469", "gpio-f469"]

gpio-f401 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "gpioh",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s2ext",
    "i2s3",
    "i2s3ext",
    "rtc",
    "otg-fs",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim9",
    "tim10",
    "tim11",
    "usart1",
    "usart2",
    "usart6",
    "rcc_shared_m",
]
gpio-f410 = [
    "gpioc",
    "gpioh",
    "dac",
    "fmpi2c1",
    "i2c2",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s5",
    "lptim1",
    "rtc",
    "spi1",
    "spi2",
    "spi5",
    "sys",
    "tim1",
    "tim5",
    "tim6",
    "tim9",
    "tim11",
    "usart1",
    "usart2",
    "usart6",
]
gpio-f411 = [
    "gpioc",
    "gpiod",
    "gpioe",  # "gpioi",
    "gpioh",
    "i2c2",
    "i2c3",
    "otg-fs",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "i2s4",
    "i2s5",
    "rtc",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim9",
    "tim10",
    "tim11",
    "usart1",
    "usart2",
    "usart6",
]
gpio-f412 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "can1",
    "can2",
    "dfsdm1",
    "fmpi2c1",
    "fsmc",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "i2s4",
    "i2s5",
    "quadspi",
    "otg-fs",
    "rng",
    "rtc",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "rcc_i2s_apb",
]
gpio-f413 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "can1",
    "can2",
    "can3",
    "dac",
    "dfsdm1",
    "dfsdm2",
    "fsmc",
    "fmpi2c1",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "i2s4",
    "i2s5",
    "lptim1",
    "quadspi",
    "otg-fs",
    "rng",
    "rtc",
    "sai1",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "uart9",
    "uart10",
    "rcc_i2s_apb",
]
gpio-f417 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioi",
    "gpioh",
    "adc2",
    "adc3",
    "can1",
    "can2",
    "dac",
    "dcmi",
    "fsmc",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s3",
    "otg-fs",
    "otg-hs",
    "rng",
    "rtc",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "uart4",
    "uart5",
    "rcc_shared_m",
]
gpio-f427 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "adc2",
    "adc3",
    "can1",
    "can2",
    "dac",
    "dcmi",
    "dma2d",
    "eth",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s3",
    "otg-fs",
    "otg-hs",
    "rng",
    "rtc",
    "sai1",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "rcc_shared_m",
]
gpio-f446 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "adc2",
    "adc3",
    "can1",
    "can2",
    "dac",
    "dcmi",
    "fmc",
    "fmpi2c1",
    "fmc",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "quadspi",
    "rtc",
    "otg-fs",
    "otg-hs",
    "sai1",
    "sai2",
    "sdio",
    "spdifrx",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "uart4",
    "uart5",
    "rcc_i2s_apb",
]
gpio-f469 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "adc2",
    "adc3",
    "can1",
    "can2",
    "dac",
    "dma2d",
    "dcmi",
    "dsihost",
    "eth",
    "fmc",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s3",
    "ltdc",
    "quadspi",
    "otg-fs",
    "otg-hs",
    "rng",
    "rtc",
    "sai1",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "rcc_shared_m",
]

# F7

stm32f722 = ["svd-f722"]
stm32f723 = ["svd-f723"]
stm32f730 = ["svd-f730"]
stm32f732 = ["svd-f732"]
stm32f733 = ["svd-f733"]
stm32f745 = ["svd-f745"]
stm32f746 = ["svd-f746"]
stm32f750 = ["svd-f750"]
stm32f756 = ["svd-f756"]
stm32f765 = ["svd-f765"]
stm32f767 = ["svd-f767"]
stm32f769 = ["svd-f769"]
stm32f777 = ["svd-f777"]
stm32f778 = ["svd-f778"]
stm32f779 = ["svd-f779"]

svd-f722 = ["f7", "stm32f7?/stm32f722", "gpio-f72x"]
svd-f723 = ["f7", "stm32f7?/stm32f723", "gpio-f72x", "usb_hs_phy"]
svd-f732 = ["f7", "stm32f7?/stm32f732", "gpio-f72x"]
svd-f733 = ["f7", "stm32f7?/stm32f733", "gpio-f72x", "usb_hs_phy"]
svd-f730 = ["f7", "stm32f7?/stm32f730", "gpio-f72x", "aes", "usb_hs_phy"]
svd-f745 = ["f7", "stm32f7?/stm32f745", "gpio-f746"]
svd-f746 = ["f7", "stm32f7?/stm32f746", "gpio-f746"]
svd-f750 = ["f7", "stm32f7?/stm32f750", "gpio-f746"]
svd-f756 = ["f7", "stm32f7?/stm32f756", "gpio-f746"]
svd-f765 = ["f7", "stm32f7?/stm32f765", "gpio-f76x"]
svd-f767 = [
    "f7",
    "stm32f7?/stm32f767",
    "gpio-f76x",
    "dsihost",
    "can3",
    "jpeg",
    "mdios",
    "sdmmc2",
]
svd-f769 = [
    "f7",
    "stm32f7?/stm32f769",
    "gpio-f76x",
    "dfsdm1",
    "dsihost",
    "can3",
    "jpeg",
    "mdios",
    "sdmmc2",
]
svd-f777 = [
    "f7",
    "stm32f7?/stm32f777",
    "gpio-f76x",
    "dsihost",
    "can3",
    "jpeg",
    "mdios",
    "sdmmc2",
]
svd-f778 = [
    "f7",
    "stm32f7?/stm32f778",
    "gpio-f76x",
    "dsihost",
    "can3",
    "jpeg",
    "mdios",
    "sdmmc2",
]
svd-f779 = [
    "f7",
    "stm32f7?/stm32f779",
    "gpio-f76x",
    "dfsdm1",
    "dsihost",
    "can3",
    "jpeg",
    "mdios",
    "sdmmc2",
]

gpio-f72x = [
    "adc2",
    "adc3",
    "can1",
    "dac",
    "fmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "lptim1",
    "quadspi",
    "rng",
    "rtc",
    "sai1",
    "sai2",
    "sdmmc1",
    "sdmmc2",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "otg-fs",
    "otg-hs",
]
gpio-f746 = [
    "adc2",
    "adc3",
    "dac",
    "dma2d",
    "can1",
    "can2",
    "cec",
    "cryp",
    "dcmi",
    "eth",
    "fmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "hash",
    "i2c2",
    "i2c3",
    "i2c4",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "lptim1",
    "ltdc",
    "quadspi",
    "rng",
    "rtc",
    "sai1",
    "sai2",
    "sdmmc1",
    "spdifrx",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "otg-fs",
    "otg-hs",
]
gpio-f76x = [
    "adc2",
    "adc3",
    "dac",
    "dma2d",
    "can1",
    "can2",
    "cec",
    "cryp",
    "dcmi",
    "eth",
    "fmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "hash",
    "i2c2",
    "i2c3",
    "i2c4",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "lptim1",
    "ltdc",
    "quadspi",
    "rng",
    "rtc",
    "sai1",
    "sai2",
    "sdmmc1",
    "spdifrx",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "otg-fs",
    "otg-hs",
]


## Support monotonic timers and other stuff that can be used by [RTICv1 framework](https://crates.io/crates/cortex-m-rtic)
rtic1 = ["dep:rtic-monotonic", "dep:systick-monotonic", "cortex-m-rtic"]

## Support monotonic timers and other stuff that can be used by [RTICv2 framework](https://crates.io/crates/rtic)
##
## Requires nightly rust compiler
rtic2 = [
    "dep:rtic-time",
    "dep:rtic",
    "dep:atomic-polyfill",
    "dep:embedded-hal-async",
]
rtic-tim2 = []
rtic-tim3 = []
rtic-tim4 = []
rtic-tim5 = []

## Implementation of `defmt::Format` for public enums and structures. See [defmt](https://crates.io/crates/defmt)
defmt = [
    "dep:defmt",
    "stm32f4?/defmt",
    "stm32f7?/defmt",
    "fugit/defmt",
    "nb/defmt-0-3",
]

## bxCAN peripheral support. See [bxcan](https://crates.io/crates/bxcan)
can = ["dep:bxcan"]

## I2S peripheral support. See [stm32_i2s_v12x](https://crates.io/crates/stm32_i2s_v12x)
i2s = ["dep:stm32_i2s_v12x"]

## USB OTG-FS peripheral support. See [synopsys-usb-otg](https://crates.io/crates/synopsys-usb-otg)
usb_fs = ["dep:synopsys-usb-otg", "synopsys-usb-otg/fs"]
## USB OTG-HS peripheral support. See [synopsys-usb-otg](https://crates.io/crates/synopsys-usb-otg)
usb_hs = ["dep:synopsys-usb-otg", "synopsys-usb-otg/hs"]

## LCD support via FMC/FSMC peripheral. See [display-interface](https://crates.io/crates/display-interface)
fsmc_lcd = ["dep:display-interface", "dep:display-interface-04"]

## SDIO peripheral support. See [sdio-host](https://crates.io/crates/sdio-host)
sdio-host = ["dep:sdio-host"]

# Next features are for internal use only!!!

bb = []
dma = []
i2c_v1 = []
i2c_v2 = []
spi_v1 = []
spi_v2 = []
uart_v2 = []
uart_v3 = []
usb_hs_phy = []
dfsdm = []
sai = []
rcc_shared_m = []
rcc_i2s_apb = []

adc2 = []
adc3 = []
adf1 = []
aes = []
can1 = []
can2 = []
can3 = []
cec = []
cryp = []
cm4 = []
crs1 = []
comp1 = []
comp2 = []
comp3 = []
comp4 = []
comp5 = []
comp6 = []
comp7 = []
crs = []
dac = []
dcmi = []
debug = []
dfsdm1 = ["dfsdm"]
dfsdm2 = ["dfsdm"]
dma2d = []
dsihost = ["embedded-display-controller"]
hash = []
eth = []
fdcan1 = []
fdcan2 = []
fdcan3 = []
fmc = []
fsmc = []
fmpi2c1 = ["dep:micromath"]
gpioc = []
gpiod = []
gpioe = []
gpiof = []
gpiog = []
gpioh = []
gpioi = []
gpioj = []
gpiok = []
hdmi = []
hrtim1 = []
hspi1 = []
i2c2 = []
i2c3 = []
i2c4 = []
i2c5 = []
i2c6 = []
i2s1 = []
i2s2 = []
i2s2ext = []
i2s3 = []
i2s3ext = []
i2s4 = []
i2s5 = []
i2s6 = []
ir = []
jpeg = []
lcd = []
lptim1 = []
lptim2 = []
lptim3 = []
lptim4 = []
lptim5 = []
lpuart1 = []
lpuart2 = []
ltdc = ["dep:micromath"]
mdios = []
mdf1 = []
quadspi = []
octospi = []
opamp2 = []
otg-fs = []
otg-hs = []
pssi = []
pwr = []
rf = []
rng = []
rtc = []
sai1 = ["sai"]
sai2 = ["sai"]
sai3 = []
sai4 = []
sdio = []
sdmmc1 = []
sdmmc2 = []
spi1 = []
spi2 = []
spi3 = []
spi4 = []
spi5 = []
spi6 = []
sys = []
spdifrx = []
swpmi1 = []
tim1 = []
tim2 = []
tim3 = []
tim4 = []
tim5 = []
tim6 = []
tim7 = []
tim8 = []
tim9 = []
tim10 = []
tim11 = []
tim12 = []
tim13 = []
tim14 = []
tim15 = []
tim16 = []
tim17 = []
tim19 = []
tim20 = []
tim21 = []
tim22 = []
tim23 = []
tim24 = []
timx = []
ts = []
tsc = []
ucpd1 = []
ucpd2 = []
usart1 = []
usart2 = []
usart3 = []
usart4 = []
usart5 = []
usart6 = []
usart7 = []
usart8 = []
usart10 = []
uart4 = []
uart5 = []
uart7 = []
uart8 = []
uart9 = []
uart10 = []
usb = []                                  # "dep:stm32-usbd"
v_ref = []

disabled = []

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

# Keep examples sorted

[[example]]
name = "analog-stopwatch-with-spi-ssd1306"
required-features = ["f4", "spi4", "tim2", "gpioe", "gpiog"] # stm32f429

[[example]]
name = "blinky-timer-irq"
required-features = ["tim2"] # stm32f411

[[example]]
name = "can-send"
required-features = ["can", "stm32f405"]

[[example]]
name = "delay-syst-blinky"
required-features = []     # stm32f411

[[example]]
name = "delay-timer-blinky"
required-features = []      # stm32f411

[[example]]
name = "display-touch"
required-features = ["fsmc_lcd", "stm32f412"] #or stm32f413

[[example]]
name = "dwt-blinky"
required-features = ["gpiog"] # "stm32f429"

[[example]]
name = "dynamic-gpio"
required-features = []

[[example]]
name = "f413disco-lcd-ferris"
required-features = [
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "fsmc",
    "fsmc_lcd",
] # stm32f413

[[example]]
name = "f469disco-lcd-test"
required-features = ["stm32f469", "defmt"]

[[example]]
name = "hd44780"
required-features = []

[[example]]
name = "i2s-audio-out"
required-features = ["stm32f411", "i2s"]

[[example]]
name = "ist7920-bidi-normal-spi"
required-features = []

[[example]]
name = "pwm"
required-features = []

[[example]]
name = "pwm-input"
required-features = ["tim8"] # stm32f446

[[example]]
name = "pwm-sinus"
required-features = ["stm32f411"]

[[example]]
name = "qei"
required-features = ["tim2"] # stm32f411

[[example]]
name = "qspi-w25q"
required-features = ["stm32f412"]

[[example]]
name = "rng-display"
required-features = ["rng"] # stm32f407

[[example]]
name = "rtc"
required-features = ["f4"]

[[example]]
name = "rtc_alarm"
required-features = ["stm32f411"]

[[example]]
name = "rtic-adc-dma"
required-features = ["rtic1", "f4"] # stm32f401

[[example]]
name = "rtic-button"
required-features = ["stm32f411", "rtic1"] # stm32f411

[[example]]
name = "rtic-i2s-audio-in-out"
required-features = ["stm32f411", "i2s", "rtic1"]

[[example]]
name = "rtic-dual-i2s-audio-in-out"
required-features = ["stm32f411", "i2s", "rtic1"]

[[example]]
name = "rtic-serial-dma-rx-idle"
required-features = ["stm32f411", "rtic1"]

[[example]]
name = "rtic-spi-slave-dma"
required-features = ["stm32f411", "rtic1"]

[[example]]
name = "rtic-tick"
required-features = ["tim2", "rtic1"]

[[example]]
name = "rtic2-tick"
required-features = ["rtic2", "rtic-tim3"]

[[example]]
name = "rtic-usart-shell"
required-features = ["stm32f411", "rtic1"] # stm32f411

[[example]]
name = "rtic-usart-shell-ssd1306"
required-features = ["stm32f411", "rtic1"] # stm32f411

[[example]]
name = "rtic-usb-cdc-echo"
required-features = ["stm32f411", "rtic1", "otg-fs", "usb_fs"] # stm32f411

[[example]]
name = "sai-duplex"
required-features = ["stm32f429"]

[[example]]
name = "sd"
required-features = ["gpiod", "sdio", "sdio-host"] # stm32f405

[[example]]
name = "serial"
required-features = []

[[example]]
name = "serial-9bit"
required-features = ["gpiod"] # stm32f411

[[example]]
name = "serial-dma"
required-features = ["stm32f407"]

[[example]]
name = "spi-dma"
required-features = ["stm32f411"]

[[example]]
name = "uart-dma"
required-features = ["stm32f405"]

[[example]]
name = "spi_16"
required-features = ["gpiod"]

[[example]]
name = "ssd1306-image"
required-features = [] # stm32f411

[[example]]
name = "st7789-lcd"
required-features = ["fsmc", "fsmc_lcd"] # stm32f412

[[example]]
name = "stopwatch-with-ssd1306-and-interrupts"
required-features = ["tim2"]                   # stm32f411

[[example]]
name = "stopwatch-with-ssd1306-and-interrupts-and-dma-i2c"
required-features = ["tim2", "stm32f411"]                  # stm32f411

[[example]]
name = "ltdc-screen"
required-features = ["stm32f429"]

[[example]]
name = "timer-periph"
required-features = []

[[example]]
name = "timer-syst"
required-features = []

[[example]]
name = "usb-serial-irq"
required-features = ["otg-fs", "usb_fs"] # stm32f407

[[example]]
name = "usb-serial-poll"
required-features = ["otg-fs", "usb_fs", "f4"] # stm32f401

[[example]]
name = "ws2812-spi"
required-features = []

[[example]]
name = "fmc-sdram"
required-features = ["stm32f469", "stm32-fmc"]

[[example]]
name = "rtic2-timer-input-capture"
required-features = ["rtic2"]
