[package]
edition = "2021"
authors = ["Michael Fairman <mfairman@tegimeki.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F469 DISCOVERY kit"
keywords = [
    "arm",
    "cortex-m",
    "stm32f469",
]
license = "0BSD"
name = "stm32f469i-disc"
repository = "https://github.com/Amperstrand/stm32f469i-disc"
version = "0.4.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["defmt"]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = { version = "1.0", optional = true }
stm32-fmc = "0.4"
otm8009a = "0.1"
nt35510 = "0.1.0"
ft6x06 = { git = "https://github.com/DougAnderson444/ft6x06", rev = "cc352f80b12fd985da4c4847771a26ebc03ece62" }

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-graphics-core]
version = "0.4"
optional = true

[dependencies.stm32f4xx-hal]
default-features = false
features = ["stm32f469", "stm32-fmc", "dsihost", "sdio-host", "usb_fs"]
path = ".."
[dev-dependencies]
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
panic-halt = "1.0.0"
embedded-graphics = "0.8.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
static_cell = "2.1.1"
usb-device = "0.3.1"
usbd-serial = "0.2.0"

[features]
default = ["defmt"]
defmt = ["dep:defmt", "stm32f4xx-hal/defmt"]
framebuffer = ["stm32f4xx-hal/framebuffer", "embedded-graphics-core"]
usb_fs = ["stm32f4xx-hal/usb_fs"]

[profile.dev]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
rpath = false

[profile.release]
debug = true
lto = true
opt-level = "s"
