[package]
name = "f429disco-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
stm32f4xx-hal = { path = "../..", features = ["stm32f429", "stm32-fmc", "framebuffer"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-semihosting = "0.6"
cortex-m-semihosting = "0.5"
embedded-graphics = "0.8"
static_cell = "2.1"
