[package]
name = "rtic2-systick"
version = "0.1.0"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = [ "print-defmt" ] }
rtic-monotonics = { version = "1.0.0-alpha.2", features = ["cortex-m-systick", "systick-100hz"] }
rtic = { version = "2.0", features = ["thumbv7-backend", "test-critical-section"]  }


[dependencies.stm32f4xx-hal]
path = "../../"
features = ["stm32f411", "async"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
